--- a/css/style.css
+++ b/css/style.css
@@ -11,12 +11,12 @@ header {
   position: fixed;
   width: 100%;
   top: 0;
-  background-color: white;
+  background-color: hsla(0, 0%, 98%, 1);
 }
 nav {
   max-width: 992px;
   margin: auto;
-  padding: 1rem;
+  padding: 1.5rem;
 }
 #navigation {
   display: flex;
@@ -25,26 +25,36 @@ nav {
   align-items: baseline;
 }
 #navigation .wordmark a {
-  color: hsla(0, 0%, 0%, 0.9);
-  font-family: 'Fraunces';
-  font-size: 1.5rem;
+  color: hsla(0, 0%, 32%, 1);
+  font-family: 'Fraunces', serif;
+  font-size: 1.75rem;
   line-height: 2rem;
-  font-variation-settings: 'opsz' 9, 'wght' 600, 'SOFT' 60, 'WONK' 1;
+  font-variation-settings: 'opsz' 9, 'wght' 600, 'SOFT' 100, 'WONK' 1;
   text-decoration: none;
 }
 #navigation .menu {
-  display: flex;
-  flex-direction: row;
-  gap: 1.5rem;
   margin: 0;
   padding: 0;
   list-style: none;
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
+  gap: 2rem;
 }
-#navigation a {
+.menu a {
+  color: hsla(0, 0%, 64%, 1);
+  font-family: 'Karla', sans-serif;
+  font-size: 1.125rem;
+  font-weight: 400;
+  line-height: 2rem;
   text-decoration: none;
+}
+.menu a:hover {
+  color: hsla(0, 0%, 32%, 1);
 }
 #menu-tgl, .menu-icn {
   display: none;
+  line-height: 2rem;
 }
 @media screen and (max-width: 576px) {
   #navigation {
@@ -58,7 +68,7 @@ nav {
   .menu-icn {
     display: block;
     position: absolute;
-    right: 1rem;
+    right: 1.5rem;
     cursor: pointer;
   }
   #menu-tgl:checked ~ .menu {
