--- a/css/fonts.css
+++ b/css/fonts.css
@@ -29,3 +29,130 @@
   src: url('../fonts/Fraunces-Italic--latin_ext.woff2') format('woff2');
   unicode-range: U+0100-024F,U+0259,U+1E00-1EFF,U+2020,U+20A0-20AB,U+20AD-20CF,U+2113,U+2C60-2C7F,U+A720-A7FF;
 }
+/* Desktop */
+.expressiveSuperheadline {
+	font-family: 'Fraunces', Georgia, serif;
+	font-size: 8rem;
+	line-height: 1.1em;
+	font-variation-settings: 'opsz' 72, 'wght' 700, 'SOFT' 50, 'WONK' 1;
+}
+.displaySuperheadline {
+	font-family: 'Karla', 'Helvetica Neue', Arial, sans-serif;
+	font-weight: 600;
+	font-size: 7rem;
+	line-height: 1.1em;
+	letter-spacign: -0.05em;
+}
+.expressiveHeadline {
+	font-family: 'Fraunces', Georgia, serif;
+	font-size: 4rem;
+	line-height: 1.2em;
+	font-variation-settings: 'opsz' 72, 'wght' 600, 'SOFT' 50, 'WONK' 1;
+}
+.displayHeadline {
+	font-family: 'Karla', 'Helvetica Neue', Arial, sans-serif;
+	font-weight: 500;
+	font-size: 3.5rem;
+	line-height: 1.2em;
+	letter-spacign: -0.05em;
+}
+.expressiveSubheadline {
+	font-family: 'Fraunces', Georgia, serif;
+	font-size: 3rem;
+	line-height: 1.4em;
+	font-variation-settings: 'opsz' 9, 'wght' 400, 'SOFT' 100, 'WONK' 1;
+}
+.displaySubheadline {
+	font-family: 'Karla', 'Helvetica Neue', Arial, sans-serif;
+	font-weight: 300;
+	font-size: 2.625rem;
+	line-height: 1.4em;
+	letter-spacign: -0.02em;
+}
+.miniheadline {
+	font-family: 'Karla', 'Helvetica Neue', Arial, sans-serif;
+	font-weight: 600;
+	font-size: 2rem;
+	line-height: 1.5em;
+}
+.blockquote {
+	font-family: 'Karla', 'Helvetica Neue', Arial, sans-serif;
+	font-weight: 300;
+	font-size: 2rem;
+	line-height: 1.5em;
+}
+.body {
+	font-family: 'Karla', 'Helvetica Neue', Arial, sans-serif;
+	font-weight: 400;
+	font-size: 1.375rem;
+	line-height: 1.5em;
+}
+.overline {
+	font-family: 'Karla', 'Helvetica Neue', Arial, sans-serif;
+	font-weight: 700;
+	font-size: 1.125rem;
+	line-height: 1.5em;
+}
+.caption {
+	font-family: 'Karla', 'Helvetica Neue', Arial, sans-serif;
+	font-weight: 400;
+	font-size: 1rem;
+	line-height: 1.5em;
+	letter-spacing: 0.02em;
+}
+/* Tablet */
+@media (max-width: 992px) {
+	.expressiveSuperheadline {
+		font-size: 4.5rem;
+	}
+	.displaySuperheadline {
+		font-size: 4rem;
+	}
+	.expressiveHeadline {
+		font-size: 3rem;
+	}
+	.displayHeadline {
+		font-size: 2.625rem;
+	}
+	.expressiveSubheadline {
+		font-size: 2rem;
+	}
+	.displaySubheadline {
+		font-size: 1.75rem;
+	}
+	.miniheadline, .blockquote {
+		font-size: 1.5rem;
+	}
+	.body {
+		font-size: 1.25rem;
+	}
+	.overline {
+		font-size: 1rem;
+		letter-spacing: 0.02em;
+	}
+	.caption {
+		font-size: 0.875rem;
+	}
+}
+/* Mobile */
+@media (max-width: 576px) {
+	.expressiveSuperheadline {
+		font-size: 4rem;
+	}
+	.displaySuperheadline {
+		font-size: 3.5rem;
+	}
+	.miniheadline, .blockquote {
+		font-size: 1.25rem;
+	}
+	.body {
+		font-size: 1.125rem;
+	}
+	.overline {
+		font-size: 0.875rem;
+	}
+	.caption {
+		font-size: 0.75rem;
+		letter-spacing: 0.05em;
+	}
+}
