--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+/* ==========================================================================
+   Type Scale
+   ========================================================================== */
+/* Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 @font-face {
   font-family: 'Fraunces';
@@ -29,7 +33,7 @@
   src: url('../fonts/Fraunces-Italic--latin_ext.woff2') format('woff2');
   unicode-range: U+0100-024F,U+0259,U+1E00-1EFF,U+2020,U+20A0-20AB,U+20AD-20CF,U+2113,U+2C60-2C7F,U+A720-A7FF;
 }
-/* Desktop */
+/* Desktop Font Scale */
 .expressiveSuperheadline {
 	font-family: 'Fraunces', Georgia, serif;
 	font-size: 8rem;
@@ -100,7 +104,7 @@
 	line-height: 1.5em;
 	letter-spacing: 0.02em;
 }
-/* Tablet */
+/* Tablet Font Scale */
 @media (max-width: 992px) {
 	.expressiveSuperheadline {
 		font-size: 4.5rem;
@@ -134,7 +138,7 @@
 		font-size: 0.875rem;
 	}
 }
-/* Mobile */
+/* Mobile Font Scale */
 @media (max-width: 576px) {
 	.expressiveSuperheadline {
 		font-size: 4rem;
@@ -156,7 +160,9 @@
 		letter-spacing: 0.05em;
 	}
 }
-
+/* ==========================================================================
+   General Settings
+   ========================================================================== */
 html {
   scroll-behavior: smooth;
 }
