--- a/style.css
+++ b/style.css
@@ -2,19 +2,18 @@
    Type Scale
    ========================================================================== */
 /* Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 @font-face {
   font-family: 'Fraunces';
   font-display: swap;
   font-weight: 100 900;
-  src: url('../fonts/Fraunces--latin_basic.woff2') format('woff2');
+  src: url('../fonts/Fraunces-latin_basic.woff2') format('woff2');
   unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
 }
 @font-face {
   font-family: 'Fraunces';
   font-display: swap;
   font-weight: 100 900;
-  src: url('../fonts/Fraunces--latin_ext.woff2') format('woff2');
+  src: url('../fonts/Fraunces-latin_ext.woff2') format('woff2');
   unicode-range: U+0100-024F,U+0259,U+1E00-1EFF,U+2020,U+20A0-20AB,U+20AD-20CF,U+2113,U+2C60-2C7F,U+A720-A7FF;
 }
 @font-face {
@@ -22,7 +21,7 @@
   font-display: swap;
   font-weight: 100 900;
   font-style: italic;
-  src: url('../fonts/Fraunces-Italic--latin_basic.woff2') format('woff2');
+  src: url('../fonts/Fraunces-Italic-latin_basic.woff2') format('woff2');
   unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
 }
 @font-face {
@@ -30,8 +29,23 @@
   font-display: swap;
   font-weight: 100 900;
   font-style: italic;
-  src: url('../fonts/Fraunces-Italic--latin_ext.woff2') format('woff2');
+  src: url('../fonts/Fraunces-Italic-latin_ext.woff2') format('woff2');
   unicode-range: U+0100-024F,U+0259,U+1E00-1EFF,U+2020,U+20A0-20AB,U+20AD-20CF,U+2113,U+2C60-2C7F,U+A720-A7FF;
+}
+@font-face {
+  font-family: 'Karla';
+  font-display: swap;
+  font-weight: 200 800;
+  src: url('../fonts/Karla.ttf') format('ttf');
+	unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+@font-face {
+  font-family: 'Karla';
+  font-display: swap;
+  font-weight: 200 800;
+	font-style: italic;
+  src: url('../fonts/Karla-Italic.ttf') format('ttf');
+	unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* Desktop Font Scale */
 .expressiveSuperheadline {
@@ -169,6 +183,9 @@ html {
 * {
   margin: 0;
   padding: 0;
+  -webkit-hyphens: auto;
+  -moz-hyphens: auto;
+  hyphens: auto;
 }
 
 /* Navigation */
