--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@
   font-family: 'Karla';
   font-display: swap;
   font-weight: 200 800;
-  src: url('fonts/Karla.ttf') format('ttf');
+  src: url('fonts/Karla.ttf') format('truetype');
 	unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 @font-face {
@@ -44,7 +44,7 @@
   font-display: swap;
   font-weight: 200 800;
 	font-style: italic;
-  src: url('fonts/Karla-Italic.ttf') format('ttf');
+  src: url('fonts/Karla-Italic.ttf') format('truetype');
 	unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* Desktop Font Scale */
