--- a/style.css
+++ b/style.css
@@ -32,21 +32,7 @@
   src: url('fonts/Fraunces-Italic-latin_ext.woff2');
   unicode-range: U+0100-024F,U+0259,U+1E00-1EFF,U+2020,U+20A0-20AB,U+20AD-20CF,U+2113,U+2C60-2C7F,U+A720-A7FF;
 }
-@font-face {
-  font-family: 'Karla';
-  font-display: swap;
-  font-weight: 200 800;
-  src: url('fonts/Karla.ttf');
-	unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-}
-@font-face {
-  font-family: 'Karla';
-  font-display: swap;
-  font-weight: 200 800;
-	font-style: italic;
-  src: url('fonts/Karla-Italic.ttf');
-	unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-}
+@import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 /* Desktop Font Scale */
 .expressiveSuperheadline {
 	font-family: 'Fraunces', Georgia, serif;
