--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body {
   scroll-snap-type: x mandatory;
   scroll-padding: 0.5rem;
 }
-@media (min-width: 1024px) {
+@media screen and (min-width: 1024px) {
   .card-carousel {
     width: calc(((100vw - 1024px) / 2) + 1024px);
     margin-left: calc( (100vw - 1024px) / 2 );
@@ -88,12 +88,12 @@ body {
   justify-content: flex-end;
   scroll-snap-align: start;
 }
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .bg-card {
     min-width: calc((100vw - 4.5rem) / 2);
   }
 }
-@media (min-width: 1024px) {
+@media screen and (min-width: 1024px) {
   .bg-card {
     min-width: calc((1024px - 4.5rem) / 2);
   }
