--- a/style.css
+++ b/style.css
@@ -27,14 +27,13 @@ body {
 }
 /* Reel Section */
 .reel {
-  width: 100vw;
   height: 100vh;
   padding: 3.5rem 0;
 }
 .reel > .title {
   max-width: 1024px;
   margin: auto;
-  padding: 1rem 0.5rem;
+  padding: 1rem;
   display: block;
   font-family: var(--primary-sans);
   font-size: var(--fs-overline);
