--- a/style.css
+++ b/style.css
@@ -169,9 +169,9 @@
 .ps-card > .title {
   padding: 0.5rem;
   font-family: var(--primary-sans);
-  font-size: var(--fs-title);
+  font-size: var(--fs-overline);
   font-weight: 400;
-  line-height: 1.5em;
+  line-height: 1.4em;
   color: var(--clr-neutral-900);
 }
 .ps-card > .content {
